--- a/estilosgrid.css
+++ b/estilosgrid.css
@@ -9,9 +9,9 @@
     grid-template-rows: repeat(3, 2fr);
 	grid-column-gap: 15px;
 	grid-row-gap: 20px;
-	height: 300px;
-	width: 150px;
+	height: 500px;
+	width: 100%;
 }
 .border{
-	border: 1px solid red;
+	border: 4px solid blue;
 }
